Believe it or not, it's working.